# everyday-arxiv

./: .gitignore  README.md  agents.md  environment.yml  main.tex  pyproject.toml
.agents/skills/arxiv-daily/: SKILL.md
.agents/skills/arxiv-daily/templates/: daily_report_template.html  paper_subagent_prompt.md
.agents/skills/feedback-memory/: SKILL.md
.agents/skills/user-bootstrap/: SKILL.md
config/: default.toml  local.example.toml
docs/: prd.md  report-preview.html  skill_design.md
src/arxiv_daily/: __init__.py  arxiv_client.py  cli.py  config.py  models.py  scholar_client.py
tests/: test_arxiv_client.py
user_profile/: README.md  feedback.example.jsonl  ideas.example.jsonl  papers.example.jsonl  research_interests.template.md
